Fixed error not showing on screen

--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -67,4 +67,8 @@ a, .btn-link {
     .content {
         padding-top: 20px;
     }
+
+    #blazor-error-ui {
+        padding-left: 175px;
+    }
 }
